source/content-script/pageview/content.css
html {
    /* initial theme variables, updated by JS later */
    /* need on html element to access outside body */
    --lindy-pagewidth: 780px;
    /* --lindy-active-font-size set in iterateDOM() */
    transition: background 0.2s ease-in-out;
}

body {
    /* start properties for transition */
    width: 100%;
    max-width: 100%;
}

html.pageview {
    background: #f1f3f4 !important;
}

html.pageview.pageview > body {
    /* animation properties are set inline */
    position: relative !important;

    width: 100%;
    min-width: 0 !important;
    max-width: var(--lindy-pagewidth) !important;
    margin: 10px auto !important;
    box-sizing: border-box !important; /* reduce inner width if there's padding */
    opacity: 1 !important;
    visibility: visible !important;

    border-radius: 10px !important;
    overflow-x: hidden !important;
    overflow-y: hidden !important;

    /* margins are also set inline in body.js for higher specifity */
    padding-top: 30px !important;
    padding-left: 50px !important;
    padding-right: 50px !important;

    cursor: auto;

    /* caution: using filter: drop-shadow() here causes rendering lag */
    box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1) !important;

    transition: all 0.6s cubic-bezier(0.87, 0, 0.13, 1) !important;
}

.lindy-body-background {
    position: absolute !important;
    top: 0 !important;
    left: 0 !important;
    width: 100% !important;
    z-index: -100 !important;
    content: "" !important;
    background: inherit;

    border-radius: 10px !important;
}

.lindy-toast {
    position: fixed;
    contain: strict;
    top: 10px;
    right: 10px;
    z-index: 9999999999;
    border-radius: 7px 7px 7px;
    background-color: #edd75b;
    box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1),
        0 4px 6px -4px rgb(0 0 0 / 0.1);
    cursor: pointer;
    overflow: hidden;

    animation: toastTimeout 5s;
    animation-delay: 0.5s;
    animation-fill-mode: both;
}
@keyframes toastTimeout {
    0% {
        visibility: hidden;
        opacity: 0;
        transform: translate3d(200px, 0, 0);
    }
    5% {
        visibility: visible;
        opacity: 1;
        transform: translate3d(0, 0, 0);
    }
    95% {
        visibility: visible;
        opacity: 1;
        transform: translate3d(0, 0, 0);
    }
    100% {
        visibility: hidden;
        opacity: 0;
        transform: translate3d(10px, 0, 0);
    }
}
.lindy-toast:hover {
    animation-play-state: paused;
    box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1),
        0 8px 10px -6px rgb(0 0 0 / 0.1);
}
.lindy-toast.lindy-toast-dismissed {
    visibility: hidden !important;
    opacity: 0 !important;
    transform: translate3d(10px, 0, 0) !important;
    /* dismiss fadeout transition not working at the moment */
}

.lindy-toast-content {
    padding: 3px;
    padding-bottom: 0;
    display: flex;
    align-items: center;
}
.lindy-toast-icon {
    width: 32px;
    color: #1f2937;
}
.lindy-toast-message {
    font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
        "Segoe UI", Roboto !important;
    font-size: 15px;
    font-weight: 600;
    color: #1f2937;
    margin: 0 6px;
    margin-top: -3px;
}

.lindy-toast-progressbar {
    width: 100%;
    height: 3px;
    background-color: #faf3ce;
}
.lindy-toast-progressbar {
    animation: toastProgressBar 5s linear;
    animation-delay: 0.5s;
    animation-fill-mode: both;
}
.lindy-toast:hover > .lindy-toast-progressbar {
    animation-play-state: paused;
}
@keyframes toastProgressBar {
    0% {
        width: 0;
    }
    100% {
        width: 100%;
    }
}

#lindy-annotations-bar {
    position: absolute;
    top: 50px;
    left: calc(
        (100vw - var(--lindy-pagewidth)) / 2 + var(--lindy-pagewidth) - 5px
    );
    width: calc((100vw - var(--lindy-pagewidth)) / 2 - 50px);
    height: calc(100% - 50px - 50px);
    user-select: none;
    contain: strict style;
    z-index: 100;
}

#lindy-annotations-marginbar {
    position: absolute;
    top: 0;
    height: 100%;

    right: 15px;

    font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
        "Segoe UI", Roboto !important;
    color: #374151;
}
#lindy-annotations-marginbar > div {
    position: absolute;
    right: 0;
    /* top and height set via JS */
}
.lindy-marginbar-dot {
    content: '';
    display: block;
    width: 10px;
    height: 10px;
    /* border-radius: 5px; */
    border-radius: 50%;
    filter: drop-shadow(0 1px 1px rgb(0 0 0 / 0.05));
    background-color: var(--darker-annotation-color);

    cursor: pointer;
    animation: fadeInDot 0.15s linear;
}

.lindy-highlight {
    cursor: pointer;
    background-color: var(--annotation-color);
    transition: background-color 0.15s linear;
}
.lindy-highlight.lindy-hover {
    background-color: var(--darker-annotation-color);
}

.lindy-crowd-highlight {
    transition: background-color 0.15s linear, text-decoration 0.15s linear;

    --annotation-color: transparent;
    text-decoration: underline solid var(--annotation-color) 0.15em;
    text-underline-offset: 0.05em;
    text-decoration-skip-ink: none;
    cursor: pointer;
}
.lindy-crowd-highlight.lindy-hover {
    background-color: var(--annotation-color);
    text-decoration-color: transparent;
}

.lindy-highlight-dot {
    position: relative;
    top: -0.3em;
    left: 0.1em;

    content: '';
    display: inline-block;
    width: 10px;
    height: 10px;
    border-radius: 50%;
    filter: drop-shadow(0 1px 1px rgb(0 0 0 / 0.05));
    background-color: var(--darker-annotation-color);

    cursor: pointer;
    animation: fadeInDot 0.15s linear;
}
@keyframes fadeInDot {
    from {
        opacity: 0;
        width: 0px;
        height: 0px;
    }
    to {
        opacity: 1;
        width: 10px;
        height: 10px;
    }
}

@media (max-width: 1200px) {
    #lindy-info-topleft {
        display: none !important;
    }

    html.pageview > body {
        margin-left: 20px !important; /* also set via inline styles */
    } 
    #lindy-annotations-bar {
        left: calc(var(--lindy-pagewidth) + 20px + 5px);
        width: calc(100vw - (var(--lindy-pagewidth) + 20px + 5px) - 50px);
    }
    .lindy-page-settings-pageadjacent {
        left: calc(var(--lindy-pagewidth) + 20px + 0px) !important;
    }
}

